--- a/src/main/java/com/kffekko_report/ui/HomePanel.form
+++ b/src/main/java/com/kffekko_report/ui/HomePanel.form
@@ -80,7 +80,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="0" green="0" red="0" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="&lt;html&gt;Une application qui synth&#xe9;tise sous forme &lt;br/&gt;de rapport automatis&#xe9; les donn&#xe9;es d&apos;exportations.&lt;/html&gt;"/>
+            <Property name="text" type="java.lang.String" value="&lt;html&gt;Une application qui synth&#xe9;tise sous forme &lt;br/&gt;de rapport automatis&#xe9; des donn&#xe9;es d&apos;exportations.&lt;/html&gt;"/>
           </Properties>
         </Component>
       </SubComponents>
